<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz2_capture_plugin_node</name>
  <version>0.0.0</version>
  <description>The rviz plugin package to capture lidar frame</description>
  <maintainer email="egon.kang@autocore.ai">jian</maintainer>
  <license>Autocore License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rviz2_capture_plugin_interface</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>qtbase5-dev</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins/plugin_description.xml"/>
  </export>
</package>
